# WAVI-on-ray

./: .gitignore  .pre-commit-config.yaml  .pydocstyle  README.md  dvc.yaml  pylintrc  pyproject.toml
.dvc/: config
datasets/: .gitignore  ensemble_10km_5D_medium.nc.dvc  ensemble_10km_basin_specific.nc.dvc  ensemble_10km_test.nc.dvc
datasets/prepared/: .gitignore
datasets/prepared/ensemble_10km_5D_medium/: .gitignore
datasets/prepared/ensemble_10km_basin_specific/: .gitignore
notebooks/: 5d_medium_data.ipynb  basin_specific.ipynb  data_exploration.ipynb  ensemble_10km_test.nc  test_ensemble.ipynb
wavi_on_ray/: __init__.py  cli.py
wavi_on_ray/ensemble_10km_5d_medium/: __init__.py  ingestion.py
wavi_on_ray/ensemble_10km_basin_specific/: __init__.py  ingestion.py  modelling.py  training_datasets.py
wavi_on_ray/ensemble_10km_test/: __init__.py  ingestion.py  modelling.py  training_datasets.py
wavi_on_ray/ingestion/: ensemble_10km_test.py
