[tool.poetry]
name = "WAVI-on-ray"
version = "0.1"
description = "A runtime environment for WAVI on ray clusters"
authors = ["Markus Kaiser <mk2092@cam.ac.uk>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
click = "^8.0.4"
dvc = { version = "^2.9.5", extras = ["s3"] }
GPy = "^1.10.0"
netCDF4 = "^1.5.8"
ray = { version = "^1.9.2", extras = ["default", "tune"] }
s3fs = { version = "^2022.2.0", extras = ["boto3"] }
xarray = "^2022.0.0"
tables = "^3.7.0"
boto3 = "^1.20"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
isort = "^5.9.3"
pre-commit = "^2.14.0"
pylint = "^2.9.6"
pydocstyle = "^6.0.0"
commitizen = "^2.18.0"
mypy = "^0.931"
ipython = "^8.0.0"
plotly = "^5.6.0"
seaborn = "^0.11.2"
jupyterlab = "^3.2.9"
nbqa = "^1.3.0"
jupyterlab-code-formatter = "^1.4.10"

[tool.poetry.scripts]
wavi = 'wavi_on_ray.cli:cli'

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disallow_subclassing_any = false
implicit_reexport = true

[[tool.mypy.overrides]]
module = ["tensorflow", "tensorflow_probability.*", "keras_dgp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ray"]
follow_imports = "skip"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
